--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://20.23.171.40:5432/sports-tournaments?currentSchema=sports
+    url:
     username: sports-tournaments
-    password:  yyg3tdry
+    password:
   liquibase:
     changeLog: classpath:/db/changelog/liquibase-changelog.xml
