--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    username: postgres
-    password: postgres
-    url: jdbc:postgresql://localhost:5432/familyfinance?currentSchema=familyfinance
+    url: jdbc:postgresql://familyfinance-server.postgres.database.azure.com:5432/postgres?user=${DB_USER}&password=${DB_PASSWORD}&sslmode=require
     driver-class-name: org.postgresql.Driver
+    hikari:
+      schema: family_finance
   liquibase:
     change-log: classpath:/db/changelog/liquibase-changelog.xml
