--- a/.github/workflows/main_familyfinance-be.yml
+++ b/.github/workflows/main_familyfinance-be.yml
@@ -23,6 +23,10 @@ jobs:
 
       - name: Build with gradle
         run: gradle clean build
+        with:
+          args: --no-daemon
+            '${{ secrets.DB_USER }}'
+            '${{ secrets.DB_PASSWORD }}'
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
