--- a/.github/workflows/main_familyfinance-be.yml
+++ b/.github/workflows/main_familyfinance-be.yml
@@ -22,6 +22,9 @@ jobs:
           java-version: '17'
 
       - name: Build with gradle
+        env:
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         run: gradle clean build
 
       - name: Upload artifact for deployment job
