--- a/.github/workflows/main_familyfinance-be.yml
+++ b/.github/workflows/main_familyfinance-be.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           DB_USER: ${{ secrets.DB_USER }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        run: gradle clean build
+        run: ./gradlew build
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
