--- a/.github/workflows/main_familyfinance-be.yml
+++ b/.github/workflows/main_familyfinance-be.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: '${{ github.workspace }}/gradle/wrapper/*.jar'
+          path: '${{ github.workspace }}/build/libs/familyfinance-be-0.0.1-SNAPSHOT.jar.jar'
 
   deploy:
     runs-on: ubuntu-latest
