--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,9 @@
 spring:
   datasource:
-    driver-class-name: org.postgresql.Driver
-    username: ${DB_USER}
-    password: ${DB_PASSWORD}
-    url: jdbc:postgresql://familyfinance-server.postgres.database.azure.com:5432/postgres?sslmode=require
+    username: postgres
+    password: postgres
+    url: jdbc:postgresql://localhost:5432/familyfinance
     hikari:
-      schema: family_finance
+      schema: familyfinance
   liquibase:
     changeLog: classpath:/db/changelog/liquibase-changelog.xml
