--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,4 @@
-datasource.username = postgres
-datasource.password = postgres
-datasource.url = jdbc:postgresql://localhost:5432/familyfinance
+datasource.username = root
+datasource.url = jdbc:mysql://localhost:3306/familyfinance
 datasource.schema = familyfinance
 datasource.change-log = db/changelog/liquibase-changeLog.xml
