--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,9 @@ configurations {
 
 repositories {
     mavenCentral()
-    uri("https://mvnrepository.com/artifact/org.liquibase/liquibase-core")
-
 }
 
 ext {
-    postgresqlVersion = '42.4.3'
     liquibaseCoreVersion = '4.17.2'
     liquibasePropsFile = 'src/main/resources/db.properties'
     mybatisVersion = '3.0.1'
@@ -48,13 +45,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation "org.springframework:spring-context"
 
-    implementation "org.postgresql:postgresql:${postgresqlVersion}"
+    implementation 'com.mysql:mysql-connector-j:8.0.32'
     implementation "org.liquibase:liquibase-core:4.22.0"
     implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:${mybatisVersion}"
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.4'
+    implementation 'org.hibernate.orm:hibernate-core:6.2.5.Final'
 
-    liquibaseRuntime "org.postgresql:postgresql:${postgresqlVersion}"
+    liquibaseRuntime 'com.mysql:mysql-connector-j:8.0.32'
     liquibaseRuntime 'org.liquibase:liquibase-core:4.22.0'
     liquibaseRuntime "org.mybatis.spring.boot:mybatis-spring-boot-starter:${mybatisVersion}"
 
