--- a/build.gradle
+++ b/build.gradle
@@ -22,17 +22,17 @@ repositories {
 ext {
     liquibaseCoreVersion = '4.17.2'
     liquibasePropsFile = 'src/main/resources/db.properties'
-    mybatisVersion = '3.0.1'
+    mybatisVersion = '3.0.2'
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation "org.springframework:spring-context"
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
+    implementation 'org.springframework:spring-context:6.0.9'
 
     implementation 'com.mysql:mysql-connector-j:8.0.32'
     implementation "org.liquibase:liquibase-core:4.22.0"
     implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:${mybatisVersion}"
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.4'
     implementation 'org.hibernate.orm:hibernate-core:6.2.5.Final'
 
@@ -40,9 +40,9 @@ dependencies {
     liquibaseRuntime 'org.liquibase:liquibase-core:4.22.0'
     liquibaseRuntime "org.mybatis.spring.boot:mybatis-spring-boot-starter:${mybatisVersion}"
 
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    compileOnly 'org.projectlombok:lombok:1.18.26'
+    annotationProcessor 'org.projectlombok:lombok:1.18.26'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
 }
 
 tasks.named('test') {
